--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -12,8 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v1
+        uses: actions/checkout@v4
+        
+      - name: Use Bun
+        uses: oven-sh/setup-bun@v1
 
       - name: Install Dependencies
         run: bun install
