--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "commitizen": "^4.3.0",
     "express": "^4.19.2",
     "husky": "^8.0.3",
-    "standard": "^17.1.0"
+    "standard": "^17.1.0",
+    "supertest": "^6.3.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
